# cpp-stc-sma

./: CMakeLists.txt  README.md
generate/: CMakeLists.txt
generate/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: sma.hpp
lib/src/: sma.cpp
lib/tests/: sma.cpp
results/: out.csv  out.ods
